Fix ping method
Add ping case in executeCommand method
Fix off by one err in ping method
Add tests for ping in MainTest

Co-authored-by: Ahlberg-iths <113943951+Ahlberg-iths@users.noreply.github.com>